<resources>
    <string name="app_name">Absensi</string>
    <string name="nav_header_title">Absensi App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_cuti">Cuti</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="active">Aktif</string>
    <string name="history">History</string>
    <string name="keterangan">keterangan</string>
    <string name="startDate">Tanggal Mulai</string>
    <string name="endDate">Tanggal Akhir</string>
    <string name="save">Simpan</string>
    <string name="pengajuan_cuti">Pengajuan Cuti</string>
    <string name="dinas">Dinas</string>
    <string name="ijin">Ijin</string>
    <string name="date_not_valid">format date not valid</string>
    <string name="description_not_valid">Description not valid</string>
    <string name="failed_save_data">Failed save data</string>
    <string name="save_data_success">save data success</string>
    <string name="sakit">sakit</string>
    <string name="nomer_pengajuan">Nomer Pengajuan</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="reason">Alasan</string>
</resources>
