<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_approval"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/approve" />
        <item
            android:id="@+id/nav_cuti"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cuti" />
        <item
            android:id="@+id/nav_dinas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/dinas" />
        <item
            android:id="@+id/nav_ijin"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ijin" />
        <item
            android:id="@+id/nav_sakit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sakit" />
    </group>

</menu>
